fix: header on mobile

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -6,7 +6,6 @@
 
   .description {
     margin-bottom: 20px;
-    width: 70%;
   }
 
   .buttons {
